[project]
name = "master-fetch"
version = "1.0.0"
description = "One MCP server to rule them all — web fetching with anti-bot bypass, smart routing, Trafilatura extraction, and content caching"
authors = [{name = "Bishesh Bhandari", email = "bishesh@master-fetch.dev"}]
requires-python = ">=3.11"
dependencies = [
    "scrapling[ai]>=0.4.7",
    "trafilatura>=2.0.0",
    "aiosqlite>=0.20.0",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "web-scraping", "cloudflare-bypass", "anti-bot", "content-extraction", "ai-agent", "mcp-server"]

[project.urls]
Repository = "https://github.com/dondai1234/master-fetch"

[project.scripts]
master-fetch = "master_fetch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/master_fetch"]
