[project]
name = "hound-mcp"
version = "10.5.0"
description = "Web research for AI agents. Fetch any page with anti-bot bypass plus web search. $0 forever. Graceful degradation when browser deps are unavailable (HTTP-only mode on Termux/Android). Token-optimized tool definitions, polished cross-platform CLI, brick-proof self-update with hound doctor + rollback."
readme = "README.md"
authors = [{name = "Bishesh Bhandari", email = "bishesh@master-fetch.dev"}]
requires-python = ">=3.11"
dependencies = [
    # scrapling CORE only (no extras). scrapling's fetchers extra pins
    # playwright==X.Y.Z exactly, and playwright has no wheels for some
    # platforms (Termux/aarch64). By declaring scrapling core only, the lean
    # install works everywhere. Browser deps are in the all extra.
    # When browser deps are missing, hound falls back to HTTP-only mode
    # (see _get_scrapling + _fallback_http_get in server.py).
    "scrapling>=0.4.7",
    # Core deps:
    "mcp>=1.27.0",  # brings anyio transitively
    "pydantic>=2.0",
    "trafilatura>=2.0.0",
    "aiosqlite>=0.20.0",
    # metasearch backends (vendored ddgs engine layer, MIT) - keyless search:
    "primp>=1.0",
    "httpx[http2]>=0.27",
    "fake-useragent>=2.0",
    "lxml>=5.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Framework :: AsyncIO",
]
keywords = ["mcp", "web-scraping", "cloudflare-bypass", "anti-bot", "content-extraction", "ai-agent", "mcp-server"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
all = [
    # Browser deps (were in scrapling's fetchers extra, now with loose pins
    # so pip can resolve any compatible version). These may not install on all
    # platforms (e.g. playwright has no aarch64/Termux wheels). When missing,
    # hound runs in HTTP-only mode.
    "playwright>=1.50",
    "patchright>=1.50",
    "curl_cffi>=0.15",
    "browserforge>=1.2.4",
    "apify-fingerprint-datapoints>=0.13.0",
    "msgspec>=0.21.1",
    "anyio>=4.13.0",
    "protego>=0.6.2",
    "markdownify>=1.2.0",
    "click>=8.3.0",
    # PDF + OCR deps:
    "requests>=2.31",
    "pdfplumber>=0.11.0",
    "pypdfium2>=4.30",
    "rapidocr>=3.0",
    "onnxruntime>=1.16",
    "tokenizers>=0.20",
]

[project.urls]
Repository = "https://github.com/dondai1234/master-fetch"
Issues = "https://github.com/dondai1234/master-fetch/issues"
Changelog = "https://github.com/dondai1234/master-fetch/blob/master/CHANGELOG.md"

[project.scripts]
hound = "master_fetch.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/master_fetch"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Always import master_fetch from src/, never from a built wheel installed in
# .venv. The dev venv ships a BUILT wheel (not editable); without this, pytest
# silently runs the stale installed copy and src/ edits go untested. This has
# bitten the project 4+ times. pythonpath (pytest 7+) wins over install.
pythonpath = ["src"]
addopts = ["-m", "not e2e"]
markers = [
    "e2e: end-to-end tests that spawn a real hound.exe subprocess. Skip by default in CI; run manually with `pytest -m e2e`.",
]
